
2016-10-13  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.c: fixed missing initialization of static_call_cache

2016-10-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y: refactored handling of occurs to (setup_occurs) and
	 (setup_occurs_min_max)
	* parser.y (setup_occurs): check for TO without DEPENDING (allow for
	  relaxed syntax)
	* cobc.c (print_fields): print fixed size OCCURS without TO phrase
	* ppparse.y (set_choice): fixed bug #328 SIGSEGV for SET SOURCEFORMAT
	  directive without active listing
	* parser.y (mnemonic_name_clause): fixed buffer overflow on long
	  (unknown) system names

2016-10-11  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Added OCCURS <minimum> TO <maximum> to print_fields() and
	  corrected length printout.
	  Also added "-R" to TYPE field for REDEFINES.

2016-10-08  Edward Hart <edward.dan.hart@gmail.com>

	* config.c: let reserved and not-reserved accept comma-separated lists

2016-10-02  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: improved checks for duplicate/conflicting clauses in ACCEPT
	  and DISPLAY statements.
	* codegen.c, parser.y, tree.h: introduced cob_flags_t typedef for
	  variables made up of bit flags.
	* parser.y: improved function names.
	* parser.y: improved support for ACUCOBOL screen phrases.
	* config.def: added no-echo-means-secure config option.

2016-09-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.c: fix bug #316 static linking with stdcall was broken
	  * new struct static_call_list (including convention and
	    return-type), removing return-type from call_list
	  * store call-convention and generate __stdcall modifiers if requested
	* codegen.c (call_list_reverse, static_call_list_reverse): added for
	  keeping the generated variables in the same order it has in COBOL,
	  called in (codegen)

2016-09-24  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: changed reserved and no-reserved options to generate