@@ -2,6 +2,9 @@
 2016-10-13  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
 	* codegen.c: fixed missing initialization of static_call_cache
+	* flags.def, cobc.c, codegen.c: added new cb_flag_c_decl_for_static_call,
+	  normally active, to create the option to disable the auto-generation of
+	  C function declarations for static CALLs
 
 2016-10-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
